添加送礼物逻辑

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -78,6 +78,9 @@
   "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
   "messages.toneko.block.add": "§aAdd the blocked word succeed",
   "messages.toneko.client.join": "§aTips: If there is any error in chat, you don't need to care about it.",
+  "message.toneko.neko.gift_success.0": "§e%s §d>> §fIs this really for me? Thank you so much meow~",
+  "message.toneko.neko.gift_success.1": "§e%s §d>> §fWow! You are so nice to me meow, I like you so much meow~",
+  "message.toneko.neko.gift_success.2": "§e%s §d>> §fI like your gift meow~Thank you meow~",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
   "advancements.toneko.root.title": "§aStick to cats",
