--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -78,6 +78,9 @@
   "messages.toneko.block.add": "§a成功新增屏蔽詞了喵",
   "messages.toneko.notOwner": "§c你不是 %d 的主人喵～",
   "messages.toneko.client.join": "§a小提示：如果聊天欄出現了一堆錯誤代碼，你可以不用管它喔",
+  "message.toneko.neko.gift_success.0": "§e%s §d>> §f这真的是给我的吗，太谢谢你了喵~",
+  "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你对我真好喵，我超喜欢你喵~",
+  "message.toneko.neko.gift_success.2": "§e%s §d>> §f我喜欢你的礼物喵~谢谢喵~",
   "title.toneko.become": "§d你變成一隻貓娘啦",
   "subtitle.toneko.become": "§a來體驗貓貓的快樂吧",
   "advancements.toneko.root.title": "§a與貓貓貼紙",
