添加送礼失败逻辑

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -81,6 +81,9 @@
   "message.toneko.neko.gift_success.0": "§e%s §d>> §fIs this really for me? Thank you so much meow~",
   "message.toneko.neko.gift_success.1": "§e%s §d>> §fWow! You are so nice to me meow, I like you so much meow~",
   "message.toneko.neko.gift_success.2": "§e%s §d>> §fI like your gift meow~Thank you meow~",
+  "message.toneko.neko.gift_fail.0": "§e%s §d>> §fAlthough I don't like your gift very much, thank you anyway, meow~",
+  "message.toneko.neko.gift_fail.1": "§e%s §d>> §fI appreciate your kindness, but I don't really need it, meow~",
+  "message.toneko.neko.gift_fail.2": "§e%s §d>> §fAlthough you are very good, I don't really need it, meow~",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
   "advancements.toneko.root.title": "§aStick to cats",
