--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -81,6 +81,9 @@
   "message.toneko.neko.gift_success.0": "§e%s §d>> §f这真的是给我的吗，太谢谢你了喵~",
   "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你对我真好喵，我超喜欢你喵~",
   "message.toneko.neko.gift_success.2": "§e%s §d>> §f我喜欢你的礼物喵~谢谢喵~",
+  "message.toneko.neko.gift_fail.0": "§e%s §d>> §f虽然我不太喜欢你的礼物，不过还是谢谢喵~",
+  "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心领了，不过我不太需要喵~",
+  "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
   "advancements.toneko.root.title": "§a和猫猫贴贴",
