--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -92,7 +92,11 @@
   "advancements.toneko.got_neko_potion.description": "§d获取猫娘药水",
   "advancements.toneko.neko_armor.title": "§a喵喵叫，猫尾巴摇",
   "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
-  "screen.toneko.quirk": "XP设置",
+  "screen.toneko.quirk": "互动设置",
+  "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
+  "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
+  "screen.toneko.neko_entity_interactive.button.follow": "跟随",
+  "screen.toneko.neko_entity_interactive.button.follow.des": "猫猫会跟着你哦",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
