完成取消乘骑玩家功能

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -93,6 +93,14 @@
   "advancements.toneko.neko_armor.title": "§aMeow, neko tails wag",
   "advancements.toneko.neko_armor.description": "§dWear neko gear",
   "screen.toneko.quirk": "Quirk Settings",
+  "screen.toneko.neko_entity_interactive.button.gift": "Give a gift",
+  "screen.toneko.neko_entity_interactive.button.gift.des": "Give the item in hand to the neko",
+  "screen.toneko.neko_entity_interactive.button.follow": "Follow",
+  "screen.toneko.neko_entity_interactive.button.follow.des": "The neko will follow you",
+  "screen.toneko.neko_entity_interactive.button.ride": "Ride",
+  "screen.toneko.neko_entity_interactive.button.ride.des": "Let the neko ride on the nearest entity (including you)",
+  "screen.toneko.neko_entity_interactive.button.lie": "Lie down",
+  "screen.toneko.neko_entity_interactive.button.lie.des": "Let the neko lie down (press again to get up)",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
   "misc.toneko.prefix": "§aneko"
