--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -93,6 +93,14 @@
   "advancements.toneko.neko_armor.title": "§a喵喵叫，貓尾巴搖",
   "advancements.toneko.neko_armor.description": "§d穿上貓貓的裝備",
   "screen.toneko.quirk": "性癖设置",
+  "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
+  "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
+  "screen.toneko.neko_entity_interactive.button.follow": "跟随",
+  "screen.toneko.neko_entity_interactive.button.follow.des": "猫猫会跟着你哦",
+  "screen.toneko.neko_entity_interactive.button.ride": "骑乘",
+  "screen.toneko.neko_entity_interactive.button.ride.des": "让猫猫骑上最近的实体（也包括你哦）",
+  "screen.toneko.neko_entity_interactive.button.lie": "躺下",
+  "screen.toneko.neko_entity_interactive.button.lie.des": "让猫猫躺下（再按一次就可以起来哦）",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘"
