--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -95,6 +95,8 @@
   "screen.toneko.quirk": "互动设置",
   "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
   "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
+  "screen.toneko.neko_entity_interactive.button.action": "行为",
+  "screen.toneko.neko_entity_interactive.button.action.des": "让猫猫做出一些动作",
   "screen.toneko.neko_entity_interactive.button.follow": "跟随",
   "screen.toneko.neko_entity_interactive.button.follow.des": "猫猫会跟着你哦",
   "screen.toneko.neko_entity_interactive.button.ride": "骑乘",
@@ -103,6 +105,8 @@
   "screen.toneko.neko_entity_interactive.button.lie.des": "让猫猫躺下（再按一次就可以起来哦）",
   "screen.toneko.neko_entity_interactive.button.get_down": "趴下",
   "screen.toneko.neko_entity_interactive.button.get_down.des": "让猫猫趴下（再按一次就可以起来哦）",
+  "screen.toneko.neko_entity_interactive.button.breed": "交配",
+  "screen.toneko.neko_entity_interactive.button.breed.des": "让最近的猫猫和猫猫交配（也可以是你哦）",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
