完善交配逻辑

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -9,6 +9,7 @@
   "itemGroup.toneko": "Neko",
   "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
+  "entity.toneko.adventurer_neko": "Adventurer Neko",
   "quirk.toneko.caress": "caress",
   "quirk.toneko.caress.des": "You like to be touched",
   "quirk.toneko.caress.use": "§dYou gently stroked %d.",
@@ -84,6 +85,8 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §fAlthough I don't like your gift very much, thank you anyway, meow~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §fI appreciate your kindness, but I don't really need it, meow~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §fAlthough you are very good, I don't really need it, meow~",
+  "message.toneko.neko.mate.start": "%s will mate with %s, please wait~",
+  "message.toneko.neko.mate.finish": "Mating completed!",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
   "advancements.toneko.root.title": "§aStick to cats",
@@ -107,6 +110,7 @@
   "screen.toneko.neko_entity_interactive.button.get_down.des": "Make the neko get down (press it again to get up)",
   "screen.toneko.neko_entity_interactive.button.breed": "mating",
   "screen.toneko.neko_entity_interactive.button.breed.des": "Let the nearest cat mate with a neko (or you)",
+  "screen.toneko.mate": "Select mate target",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
   "misc.toneko.prefix": "§aneko"
