--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -9,6 +9,7 @@
   "itemGroup.toneko": "猫猫",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反转",
+  "entity.toneko.adventurer_neko": "冒险家猫娘",
   "quirk.toneko.caress": "抚摸",
   "quirk.toneko.caress.des": "你喜欢被摸摸",
   "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
@@ -84,6 +85,8 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §f虽然我不太喜欢你的礼物，不过还是谢谢喵~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心领了，不过我不太需要喵~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
+  "message.toneko.neko.mate.start": "%s 将会与 %s 进行交配，请稍等~",
+  "message.toneko.neko.mate.finish": "交配完成！",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
   "advancements.toneko.root.title": "§a和猫猫贴贴",
@@ -106,7 +109,8 @@
   "screen.toneko.neko_entity_interactive.button.get_down": "趴下",
   "screen.toneko.neko_entity_interactive.button.get_down.des": "让猫猫趴下（再按一次就可以起来哦）",
   "screen.toneko.neko_entity_interactive.button.breed": "交配",
-  "screen.toneko.neko_entity_interactive.button.breed.des": "让最近的猫猫和猫猫交配（也可以是你哦）",
+  "screen.toneko.neko_entity_interactive.button.breed.des": "让猫猫和附近的猫猫交配（也可以是你哦）",
+  "screen.toneko.mate": "选择交配对象",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
