--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -9,6 +9,7 @@
   "itemGroup.toneko": "猫猫",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反轉",
+  "entity.toneko.adventurer_neko": "冒险家猫娘",
   "quirk.toneko.caress": "撫摸",
   "quirk.toneko.caress.des": "你喜欢被摸摸",
   "quirk.toneko.caress.use": "§d你輕輕撫摸了 %d §d喵～",
@@ -84,6 +85,8 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §f虽然我不太喜欢你的礼物，不过还是谢谢喵~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心领了，不过我不太需要喵~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
+  "message.toneko.neko.mate.start": "%s 将会与 %s 进行交配，请稍等~",
+  "message.toneko.neko.mate.finish": "交配完成！",
   "title.toneko.become": "§d你變成一隻貓娘啦",
   "subtitle.toneko.become": "§a來體驗貓貓的快樂吧",
   "advancements.toneko.root.title": "§a與貓貓貼紙",
@@ -95,12 +98,19 @@
   "screen.toneko.quirk": "性癖设置",
   "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
   "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
+  "screen.toneko.neko_entity_interactive.button.action": "行为",
+  "screen.toneko.neko_entity_interactive.button.action.des": "让猫猫做出一些动作",
   "screen.toneko.neko_entity_interactive.button.follow": "跟随",
   "screen.toneko.neko_entity_interactive.button.follow.des": "猫猫会跟着你哦",
   "screen.toneko.neko_entity_interactive.button.ride": "骑乘",
   "screen.toneko.neko_entity_interactive.button.ride.des": "让猫猫骑上最近的实体（也包括你哦）",
   "screen.toneko.neko_entity_interactive.button.lie": "躺下",
   "screen.toneko.neko_entity_interactive.button.lie.des": "让猫猫躺下（再按一次就可以起来哦）",
+  "screen.toneko.neko_entity_interactive.button.get_down": "趴下",
+  "screen.toneko.neko_entity_interactive.button.get_down.des": "让猫猫趴下（再按一次就可以起来哦）",
+  "screen.toneko.neko_entity_interactive.button.breed": "交配",
+  "screen.toneko.neko_entity_interactive.button.breed.des": "让猫猫和附近的猫猫交配（也可以是你哦）",
+  "screen.toneko.mate": "选择交配对象",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘"
