完善交配逻辑

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -87,6 +87,19 @@
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §fAlthough you are very good, I don't really need it, meow~",
   "message.toneko.neko.mate.start": "%s will mate with %s, please wait~",
   "message.toneko.neko.mate.finish": "Mating completed!",
+  "message.toneko.neko.breed_fail_baby.0": "§cYour idea is a bit dangerous!",
+  "message.toneko.neko.breed_fail_baby.1": "§cPlease stop your behavior!",
+  "message.toneko.neko.breed_fail_baby.2": "§cDo you know what you are going to do?",
+  "message.toneko.neko.breed_fail_baby.3": "§cDoing this... will be illegal, right?",
+  "message.toneko.neko.breed_fail_baby.4": "§cDon't blame me for not warning you!",
+  "message.toneko.neko.breed_fail_baby.5": "§cHow can you do this!",
+  "message.toneko.neko.breed_fail_baby.6": "§cWhat do you want to do?",
+  "message.toneko.neko.breed_fail_baby.7": "§cIf you do this... you will be punished~",
+  "message.toneko.neko.breed_fail_baby.8": "§cYou...? What is this...?",
+  "message.toneko.neko.breed_fail_baby.9": "§cDeath penalty! Must be death penalty!",
+  "message.toneko.neko.breed_fail_baby.10": "§cHeitai! Heitai! Heitai! Heitai! Heitai!!!",
+  "message.toneko.neko.breed_fail_baby.11": "§cWhat on earth do you want to do, heitai!",
+  "message.toneko.neko.breed_fail_baby.12": "§cDo you know the consequences of doing this!!",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
   "advancements.toneko.root.title": "§aStick to cats",
