--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -87,6 +87,19 @@
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
   "message.toneko.neko.mate.start": "%s 将会与 %s 进行交配，请稍等~",
   "message.toneko.neko.mate.finish": "交配完成！",
+  "message.toneko.neko.breed_fail_baby.0": "§c你的想法有点危险!",
+  "message.toneko.neko.breed_fail_baby.1": "§c请停止你的行为!",
+  "message.toneko.neko.breed_fail_baby.2": "§c你清楚你要干什么吗?",
+  "message.toneko.neko.breed_fail_baby.3": "§c这样做...会犯法的吧?",
+  "message.toneko.neko.breed_fail_baby.4": "§c不要怪我没警告过你！",
+  "message.toneko.neko.breed_fail_baby.5": "§c你怎么可以这样！",
+  "message.toneko.neko.breed_fail_baby.6": "§c你...想干什么？",
+  "message.toneko.neko.breed_fail_baby.7": "§c这样的话...你会受到惩罚的哦~",
+  "message.toneko.neko.breed_fail_baby.8": "§c你...?这是...?",
+  "message.toneko.neko.breed_fail_baby.9": "§c死刑！必须死刑！",
+  "message.toneko.neko.breed_fail_baby.10": "§c变态！变态！变态！变态！变态！！！",
+  "message.toneko.neko.breed_fail_baby.11": "§c你这个变态到底想要干什么啊！",
+  "message.toneko.neko.breed_fail_baby.12": "§c你知道这样做的后果吗！！",
   "title.toneko.become": "§d你變成一隻貓娘啦",
   "subtitle.toneko.become": "§a來體驗貓貓的快樂吧",
   "advancements.toneko.root.title": "§a與貓貓貼紙",
