--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -100,6 +100,30 @@
   "message.toneko.neko.breed_fail_baby.10": "§c变态！变态！变态！变态！变态！！！",
   "message.toneko.neko.breed_fail_baby.11": "§c你这个变态到底想要干什么啊！",
   "message.toneko.neko.breed_fail_baby.12": "§c你知道这样做的后果吗！！",
+  "message.toneko.crystal_neko.who.0": "§dCrystal_Neko §e>> §b我是CrystalNeko",
+  "message.toneko.crystal_neko.who.1": "§dCrystal_Neko §e>> §b唔... 这个名字有点难记吧...",
+  "message.toneko.crystal_neko.who.2": "§dCrystal_Neko §e>> §b不过没关系哒，你其实不用叫我全名哦... 叫我“猫猫”也可以哦",
+  "message.toneko.crystal_neko.who.3": "§dCrystal_Neko §e>> §btoNeko的开发者...就是我哦",
+  "message.toneko.crystal_neko.who.4": "§dCrystal_Neko §e>> §b不知道你喜不喜欢这个模组呢",
+  "message.toneko.crystal_neko.who.5": "§dCrystal_Neko §e>> §b不过... 你能游玩它我就已经很高兴啦",
+  "message.toneko.crystal_neko.who.6": "§dCrystal_Neko §e>> §b还想听我讲些其它的东西嘛，我很乐意讲给你听哒",
+  "message.toneko.crystal_neko.about_mod.0": "§dCrystal_Neko §e>> §btoNeko这个模组的话... 准确的说，是插件... 最开始我只是做着玩的",
+  "message.toneko.crystal_neko.about_mod.1": "§dCrystal_Neko §e>> §b然后就随便录了个视频发在了B站上",
+  "message.toneko.crystal_neko.about_mod.2": "§dCrystal_Neko §e>> §b不过... 我并没有想到，它居然小火了一把...",
+  "message.toneko.crystal_neko.about_mod.3": "§dCrystal_Neko §e>> §b说实话... 我还挺意外的...",
+  "message.toneko.crystal_neko.about_mod.4": "§dCrystal_Neko §e>> §b然后呢... 我下定了决心，将这个插件继续开发下去",
+  "message.toneko.crystal_neko.about_mod.5": "§dCrystal_Neko §e>> §b至于为什么现在是模组了呢... 这个其实也说来话长了喵",
+  "message.toneko.crystal_neko.about_mod.6": "§dCrystal_Neko §e>> §b考虑到绝大部分玩家都不太会用插件... 所以，我就开始开发模组版了",
+  "message.toneko.crystal_neko.about_mod.7": "§dCrystal_Neko §e>> §b模组版本确实更受欢迎一点，毕竟用的人多嘛",
+  "message.toneko.crystal_neko.about_mod.8": "§dCrystal_Neko §e>> §b中途，也就是24年6月份的时候，我还把它重构了一次",
+  "message.toneko.crystal_neko.about_mod.9": "§dCrystal_Neko §e>> §b重构... 可想而知，工作量还是挺大的",
+  "message.toneko.crystal_neko.about_mod.10": "§dCrystal_Neko §e>> §b不过为了它以后的发展，我还是下定决心了...",
+  "message.toneko.crystal_neko.about_mod.11": "§dCrystal_Neko §e>> §b说起来... toNeko也一周年了呢...",
+  "message.toneko.crystal_neko.about_mod.12": "§dCrystal_Neko §e>> §b我也确实没想到我能坚持这么久",
+  "message.toneko.crystal_neko.about_mod.13": "§dCrystal_Neko §e>> §b对我来说，真是个奇迹喵",
+  "message.toneko.crystal_neko.about_mod.14": "§dCrystal_Neko §e>> §b嗯... 好啦，大概就这么多吧...",
+  "message.toneko.crystal_neko.about_mod.15": "§dCrystal_Neko §e>> §b也是很感谢你能听完这段故事",
+  "message.toneko.crystal_neko.about_mod.16": "§dCrystal_Neko §e>> §b还有其它想知道的嘛",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
   "advancements.toneko.root.title": "§a和猫猫贴贴",
@@ -123,6 +147,10 @@
   "screen.toneko.neko_entity_interactive.button.get_down.des": "让猫猫趴下（再按一次就可以起来哦）",
   "screen.toneko.neko_entity_interactive.button.breed": "交配",
   "screen.toneko.neko_entity_interactive.button.breed.des": "让猫猫和附近的猫猫交配（也可以是你哦）",
+  "screen.toneko.crystal_neko_interactive.button.who": "你是?",
+  "screen.toneko.crystal_neko_interactive.button.who.des": "来听听作者简短的介绍吧",
+  "screen.toneko.crystal_neko_interactive.button.about_mod": "关于模组",
+  "screen.toneko.crystal_neko_interactive.button.about_mod.des": "听听toNeko的一些信息吧",
   "screen.toneko.mate": "选择交配对象",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
