添加链接页面

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -124,6 +124,23 @@
   "message.toneko.crystal_neko.about_mod.14": "§dCrystal_Neko §e>> §b嗯... 好啦，大概就这么多吧...",
   "message.toneko.crystal_neko.about_mod.15": "§dCrystal_Neko §e>> §b也是很感谢你能听完这段故事",
   "message.toneko.crystal_neko.about_mod.16": "§dCrystal_Neko §e>> §b还有其它想知道的嘛",
+  "message.toneko.crystal_neko.plans.0": "§dCrystal_Neko §e>> §b关于这个模组未来的更新计划嘛...",
+  "message.toneko.crystal_neko.plans.1": "§dCrystal_Neko §e>> §b其实比较随缘的...",
+  "message.toneko.crystal_neko.plans.2": "§dCrystal_Neko §e>> §b目前我也没有一个很明确的计划",
+  "message.toneko.crystal_neko.plans.3": "§dCrystal_Neko §e>> §b基本上... 是想到什么好玩的就做了",
+  "message.toneko.crystal_neko.plans.4": "§dCrystal_Neko §e>> §b它是以”猫娘“和”可爱“为主题在一直更新...",
+  "message.toneko.crystal_neko.plans.5": "§dCrystal_Neko §e>> §b所以... 你可以看到... 更新很零散...",
+  "message.toneko.crystal_neko.plans.6": "§dCrystal_Neko §e>> §b嗯... 目前主要还是在Fabric端更新",
+  "message.toneko.crystal_neko.plans.7": "§dCrystal_Neko §e>> §bNeoForge可能也会更新，但是功能不太全，更新速度也可能相对慢点",
+  "message.toneko.crystal_neko.plans.8": "§dCrystal_Neko §e>> §b毕竟... 我也没有太多的时间",
+  "message.toneko.crystal_neko.plans.9": "§dCrystal_Neko §e>> §b而Bukkit那边... 我已经没有精力去做了...",
+  "message.toneko.crystal_neko.plans.10": "§dCrystal_Neko §e>> §b所以未来的话呢，主要就管Fabric这边了",
+  "message.toneko.crystal_neko.plans.11": "§dCrystal_Neko §e>> §b目前的主要工作还是制作猫娘NPC",
+  "message.toneko.crystal_neko.plans.12": "§dCrystal_Neko §e>> §b毕竟toNeko单人模式下可玩的内容还是太少了喵",
+  "message.toneko.crystal_neko.plans.13": "§dCrystal_Neko §e>> §b至少有了猫娘后，单人模式也能体验到不少内容了喵",
+  "message.toneko.crystal_neko.plans.14": "§dCrystal_Neko §e>> §b然后嘛...",
+  "message.toneko.crystal_neko.plans.15": "§dCrystal_Neko §e>> §b如果你有什么好的想法的话呢，可以在github上告诉我哦，我会尽可能采纳的喵",
+  "message.toneko.crystal_neko.plans.16": "§dCrystal_Neko §e>> §b大概就这些啦~",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
   "advancements.toneko.root.title": "§a和猫猫贴贴",
@@ -147,11 +164,23 @@
   "screen.toneko.neko_entity_interactive.button.get_down.des": "让猫猫趴下（再按一次就可以起来哦）",
   "screen.toneko.neko_entity_interactive.button.breed": "交配",
   "screen.toneko.neko_entity_interactive.button.breed.des": "让猫猫和附近的猫猫交配（也可以是你哦）",
+  "screen.toneko.mate": "选择交配对象",
   "screen.toneko.crystal_neko_interactive.button.who": "你是?",
   "screen.toneko.crystal_neko_interactive.button.who.des": "来听听作者简短的介绍吧",
   "screen.toneko.crystal_neko_interactive.button.about_mod": "关于模组",
   "screen.toneko.crystal_neko_interactive.button.about_mod.des": "听听toNeko的一些信息吧",
-  "screen.toneko.mate": "选择交配对象",
+  "screen.toneko.crystal_neko_interactive.button.plans": "更新计划",
+  "screen.toneko.crystal_neko_interactive.button.plans.des": "模组未来的更新计划",
+  "screen.toneko.crystal_neko_interactive.button.links": "相关链接",
+  "screen.toneko.crystal_neko_interactive.button.links.des": "这里是模组的一些链接哦",
+  "screen.toneko.links.button.github": "github",
+  "screen.toneko.links.button.github.des": "来看看源代码喵？点个star也行哦",
+  "screen.toneko.links.button.modrinth": "modrinth",
+  "screen.toneko.links.button.modrinth.des": "这是模组的下载地址喵",
+  "screen.toneko.links.button.discord": "discord",
+  "screen.toneko.links.button.discord.des": "来这里聊聊天喵",
+  "screen.toneko.links.button.bilibili": "B站",
+  "screen.toneko.links.button.bilibili.des": "这事模组作者的B站帐号哦",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
