添加更多页面喵

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -141,6 +141,21 @@
   "message.toneko.crystal_neko.plans.14": "§dCrystal_Neko §e>> §b然后嘛...",
   "message.toneko.crystal_neko.plans.15": "§dCrystal_Neko §e>> §b如果你有什么好的想法的话呢，可以在github上告诉我哦，我会尽可能采纳的喵",
   "message.toneko.crystal_neko.plans.16": "§dCrystal_Neko §e>> §b大概就这些啦~",
+  "message.toneko.crystal_neko.interactive.breed.0": "§dCrystal_Neko §e>> §b唔诶...?",
+  "message.toneko.crystal_neko.interactive.breed.1": "§dCrystal_Neko §e>> §b你... 你想和我交配?",
+  "message.toneko.crystal_neko.interactive.breed.2": "§dCrystal_Neko §e>> §b这样做... 不可以的喵！",
+  "message.toneko.crystal_neko.interactive.breed.3": "§dCrystal_Neko §e>> §b别这样喵",
+  "message.toneko.crystal_neko.nya.0": "§dCrystal_Neko §e>> §b喵~",
+  "message.toneko.crystal_neko.nya.1": "§dCrystal_Neko §e>> §b喵喵喵？",
+  "message.toneko.crystal_neko.nya.2": "§dCrystal_Neko §e>> §b喵呜~",
+  "message.toneko.crystal_neko.nya.3": "§dCrystal_Neko §e>> §b喵~~~",
+  "message.toneko.crystal_neko.nya.4": "§dCrystal_Neko §e>> §b喵喵",
+  "message.toneko.crystal_neko.nya.5": "§dCrystal_Neko §e>> §b喵！",
+  "message.toneko.crystal_neko.nya_tried.0": "§dCrystal_Neko §e>> §c你玩够了没有呀！",
+  "message.toneko.crystal_neko.nya_tried.1": "§dCrystal_Neko §e>> §c不要得寸进尺呀好不好？",
+  "message.toneko.crystal_neko.nya_tried.2": "§dCrystal_Neko §e>> §c再这样我会生气哒！",
+  "message.toneko.crystal_neko.nya_tried.3": "§dCrystal_Neko §e>> §c杂鱼笨蛋变态！",
+  "message.toneko.crystal_neko.nya_tried.4": "§dCrystal_Neko §e>> §c休息一下吧喵",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
   "advancements.toneko.root.title": "§a和猫猫贴贴",
@@ -173,6 +188,9 @@
   "screen.toneko.crystal_neko_interactive.button.plans.des": "模组未来的更新计划",
   "screen.toneko.crystal_neko_interactive.button.links": "相关链接",
   "screen.toneko.crystal_neko_interactive.button.links.des": "这里是模组的一些链接哦",
+  "screen.toneko.crystal_neko_interactive.button.interactive": "互动",
+  "screen.toneko.crystal_neko_interactive.button.more": "更多",
+  "screen.toneko.crystal_neko_more_interactive.button.nya": "喵喵喵",
   "screen.toneko.links.button.github": "github",
   "screen.toneko.links.button.github.des": "来看看源代码喵？点个star也行哦",
   "screen.toneko.links.button.modrinth": "modrinth",
