遗漏了一点小细节，抱歉喵

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -189,8 +189,11 @@
   "screen.toneko.crystal_neko_interactive.button.links": "相关链接",
   "screen.toneko.crystal_neko_interactive.button.links.des": "这里是模组的一些链接哦",
   "screen.toneko.crystal_neko_interactive.button.interactive": "互动",
+  "screen.toneko.crystal_neko_interactive.button.interactive.des": "像和其它猫猫一样互动",
   "screen.toneko.crystal_neko_interactive.button.more": "更多",
+  "screen.toneko.crystal_neko_interactive.button.more.des": "看看更多互动喵",
   "screen.toneko.crystal_neko_more_interactive.button.nya": "喵喵喵",
+  "screen.toneko.crystal_neko_more_interactive.button.nya.des": "喵呜~",
   "screen.toneko.links.button.github": "github",
   "screen.toneko.links.button.github.des": "来看看源代码喵？点个star也行哦",
   "screen.toneko.links.button.modrinth": "modrinth",
