添加了猫娘受伤音效喵

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -85,6 +85,12 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §f虽然我不太喜欢你的礼物，不过还是谢谢喵~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心领了，不过我不太需要喵~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f虽然你很好，不过我不太需要喵~",
+  "message.toneko.neko.on_hurt.0": "§e%s §d>> §f你好坏！",
+  "message.toneko.neko.on_hurt.1": "§e%s §d>> §f我讨厌你！",
+  "message.toneko.neko.on_hurt.2": "§e%s §d>> §f你...你这么可以这样！！",
+  "message.toneko.neko.on_hurt.3": "§e%s §d>> §f是...不小心的吧？",
+  "message.toneko.neko.on_hurt.4": "§e%s §d>> §f你...你太坏了！",
+  "message.toneko.neko.on_hurt.5": "§e%s §d>> §f大坏蛋！",
   "message.toneko.neko.mate.start": "%s 将会与 %s 进行交配，请稍等~",
   "message.toneko.neko.mate.finish": "交配完成！",
   "message.toneko.neko.breed_fail_baby.0": "§c你的想法有点危险!",
