更新了一点英语语言喵

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -57,8 +57,8 @@
   "command.tonekoadmin.set.false": "§aSet %d to neko succeed!",
   "command.tonekoadmin.set.true": "§aUnset %d to neko succeed!",
   "command.tonekoadmin.reload": "§aReload the config and language succeed!",
-  "command.tonekoadmin.reload.data": "§aSuccessfully reloaded cat data file meow",
-  "command.tonekoadmin.skin.list": "§bAll cat skins are here:\n %d",
+  "command.tonekoadmin.reload.data": "§aSuccessfully reloaded neko data file meow",
+  "command.tonekoadmin.skin.list": "§bAll neko skins are here:\n %d",
   "command.tonekoadmin.skin.add": "§aSuccessfully added %d §a skins meow",
   "command.tonekoadmin.skin.remove": "§aSuccessfully deleted %d §a skins meow",
   "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
@@ -85,6 +85,12 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §fAlthough I don't like your gift very much, thank you anyway, meow~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §fI appreciate your kindness, but I don't really need it, meow~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §fAlthough you are very good, I don't really need it, meow~",
+  "message.toneko.neko.on_hurt.0": "§e%s §d>> §fYou are so bad!",
+  "message.toneko.neko.on_hurt.1": "§e%s §d>> §fI hate you!",
+  "message.toneko.neko.on_hurt.2": "§e%s §d>> §fYou... you cannot do this!",
+  "message.toneko.neko.on_hurt.3": "§e%s §d>> §fYou... were careless?",
+  "message.toneko.neko.on_hurt.4": "§e%s §d>> §fYou... You are so bad!",
+  "message.toneko.neko.on_hurt.5": "§e%s §d>> §fBig bad!",
   "message.toneko.neko.mate.start": "%s will mate with %s, please wait~",
   "message.toneko.neko.mate.finish": "Mating completed!",
   "message.toneko.neko.breed_fail_baby.0": "§cYour idea is a bit dangerous!",
@@ -97,13 +103,69 @@
   "message.toneko.neko.breed_fail_baby.7": "§cIf you do this... you will be punished~",
   "message.toneko.neko.breed_fail_baby.8": "§cYou...? What is this...?",
   "message.toneko.neko.breed_fail_baby.9": "§cDeath penalty! Must be death penalty!",
-  "message.toneko.neko.breed_fail_baby.10": "§cHeitai! Heitai! Heitai! Heitai! Heitai!!!",
-  "message.toneko.neko.breed_fail_baby.11": "§cWhat on earth do you want to do, heitai!",
+  "message.toneko.neko.breed_fail_baby.10": "§cHentai! Hentai! Hentai! Hentai! Hentai!!!",
+  "message.toneko.neko.breed_fail_baby.11": "§cWhat on earth do you want to do, Hentai!",
   "message.toneko.neko.breed_fail_baby.12": "§cDo you know the consequences of doing this!!",
+  "message.toneko.crystal_neko.who.0": "§dCrystal_Neko §e>> §bI am CrystalNeko",
+  "message.toneko.crystal_neko.who.1": "§dCrystal_Neko §e>> §bHmm... This name is a little hard to remember...",
+  "message.toneko.crystal_neko.who.2": "§dCrystal_Neko §e>> §bBut it doesn't matter，you don't have to call me full name... Call me any alias if you like.",
+  "message.toneko.crystal_neko.who.3": "§dCrystal_Neko §e>> §bThe developer of toNeko... It's me.",
+  "message.toneko.crystal_neko.who.4": "§dCrystal_Neko §e>> §bDo you like this mod?",
+  "message.toneko.crystal_neko.who.5": "§dCrystal_Neko §e>> §bBut... I am so happy that you can play it.",
+  "message.toneko.crystal_neko.who.6": "§dCrystal_Neko §e>> §bDo you want to listen to me saying other things? I am happy to say to you!",
+  "message.toneko.crystal_neko.about_mod.0": "§dCrystal_Neko §e>> §btoNeko... At first, it was a plugin. I just made it for fun.",
+  "message.toneko.crystal_neko.about_mod.1": "§dCrystal_Neko §e>> §bThen... I made a vid and publish on BiliBili(A Chinese video website)",
+  "message.toneko.crystal_neko.about_mod.2": "§dCrystal_Neko §e>> §bBut... To my surprise, it getting a little popular.",
+  "message.toneko.crystal_neko.about_mod.3": "§dCrystal_Neko §e>> §bIn fact, I feel quite surprised",
+  "message.toneko.crystal_neko.about_mod.4": "§dCrystal_Neko §e>> §bThen... I made up my mind. I decided to continue to develop.",
+  "message.toneko.crystal_neko.about_mod.5": "§dCrystal_Neko §e>> §bBut why it been a mod... I have something to say.",
+  "message.toneko.crystal_neko.about_mod.6": "§dCrystal_Neko §e>> §bBecause the user of plugin is not so many, so I made Mod version.",
+  "message.toneko.crystal_neko.about_mod.7": "§dCrystal_Neko §e>> §bAs I expected, the mod version is more popular than plugin version.",
+  "message.toneko.crystal_neko.about_mod.8": "§dCrystal_Neko §e>> §bHum... In June,2024, I even rewrite it.",
+  "message.toneko.crystal_neko.about_mod.9": "§dCrystal_Neko §e>> §bRewrite... You maybe know the workload of it.",
+  "message.toneko.crystal_neko.about_mod.10": "§dCrystal_Neko §e>> §bBut... For future develop, I still decided to do it.",
+  "message.toneko.crystal_neko.about_mod.11": "§dCrystal_Neko §e>> §bCome to think of it... toNeko has also celebrated its first anniversary...",
+  "message.toneko.crystal_neko.about_mod.12": "§dCrystal_Neko §e>> §bI really didn't expect that I could last this long.",
+  "message.toneko.crystal_neko.about_mod.13": "§dCrystal_Neko §e>> §bIt a miracle to me!",
+  "message.toneko.crystal_neko.about_mod.14": "§dCrystal_Neko §e>> §bEmmm... That's maybe all.",
+  "message.toneko.crystal_neko.about_mod.15": "§dCrystal_Neko §e>> §bThanks for listening I say this store.",
+  "message.toneko.crystal_neko.about_mod.16": "§dCrystal_Neko §e>> §bDo you want to know others?",
+  "message.toneko.crystal_neko.plans.0": "§dCrystal_Neko §e>> §bAbout the update plan of this mod...",
+  "message.toneko.crystal_neko.plans.1": "§dCrystal_Neko §e>> §bIt is casual.",
+  "message.toneko.crystal_neko.plans.2": "§dCrystal_Neko §e>> §bI have no any clear plan...",
+  "message.toneko.crystal_neko.plans.3": "§dCrystal_Neko §e>> §bBasically... I just do whatever I think is fun.",
+  "message.toneko.crystal_neko.plans.4": "§dCrystal_Neko §e>> §bIt is constantly updated with the themes of \"Neko\" and \"Kawai\"...",
+  "message.toneko.crystal_neko.plans.5": "§dCrystal_Neko §e>> §bSo... As you can see... The updates are so scattered",
+  "message.toneko.crystal_neko.plans.6": "§dCrystal_Neko §e>> §bEmm... Now main update is on Fabric.",
+  "message.toneko.crystal_neko.plans.7": "§dCrystal_Neko §e>> §bAlthough NeoForge maybe update, but it slower than Fabric version...",
+  "message.toneko.crystal_neko.plans.8": "§dCrystal_Neko §e>> §bBecause... I don't have so many time...",
+  "message.toneko.crystal_neko.plans.9": "§dCrystal_Neko §e>> §bAnd Bukkit.... I have no time to do it",
+  "message.toneko.crystal_neko.plans.10": "§dCrystal_Neko §e>> §bSo maybe... I will make the Fabric version only in future.",
+  "message.toneko.crystal_neko.plans.11": "§dCrystal_Neko §e>> §bNow main work is make neko NPC.",
+  "message.toneko.crystal_neko.plans.12": "§dCrystal_Neko §e>> §bBecause there is so less content in single-player mode",
+  "message.toneko.crystal_neko.plans.13": "§dCrystal_Neko §e>> §bAt least with the neko, the single-player mode can also experience a lot of content.",
+  "message.toneko.crystal_neko.plans.14": "§dCrystal_Neko §e>> §bThen...",
+  "message.toneko.crystal_neko.plans.15": "§dCrystal_Neko §e>> §bIf you have any good ideas, you can tell me on github-nya.",
+  "message.toneko.crystal_neko.plans.16": "§dCrystal_Neko §e>> §b大概就这些啦~",
+  "message.toneko.crystal_neko.interactive.breed.0": "§dCrystal_Neko §e>> §b唔诶...?",
+  "message.toneko.crystal_neko.interactive.breed.1": "§dCrystal_Neko §e>> §b你... 你想和我交配?",
+  "message.toneko.crystal_neko.interactive.breed.2": "§dCrystal_Neko §e>> §b这样做... 不可以的喵！",
+  "message.toneko.crystal_neko.interactive.breed.3": "§dCrystal_Neko §e>> §b别这样喵",
+  "message.toneko.crystal_neko.nya.0": "§dCrystal_Neko §e>> §b喵~",
+  "message.toneko.crystal_neko.nya.1": "§dCrystal_Neko §e>> §b喵喵喵？",
+  "message.toneko.crystal_neko.nya.2": "§dCrystal_Neko §e>> §b喵呜~",
+  "message.toneko.crystal_neko.nya.3": "§dCrystal_Neko §e>> §b喵~~~",
+  "message.toneko.crystal_neko.nya.4": "§dCrystal_Neko §e>> §b喵喵",
+  "message.toneko.crystal_neko.nya.5": "§dCrystal_Neko §e>> §b喵！",
+  "message.toneko.crystal_neko.nya_tried.0": "§dCrystal_Neko §e>> §c你玩够了没有呀！",
+  "message.toneko.crystal_neko.nya_tried.1": "§dCrystal_Neko §e>> §c不要得寸进尺呀好不好？",
+  "message.toneko.crystal_neko.nya_tried.2": "§dCrystal_Neko §e>> §c再这样我会生气哒！",
+  "message.toneko.crystal_neko.nya_tried.3": "§dCrystal_Neko §e>> §c杂鱼笨蛋变态！",
+  "message.toneko.crystal_neko.nya_tried.4": "§dCrystal_Neko §e>> §c休息一下吧喵",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
-  "advancements.toneko.root.title": "§aStick to cats",
-  "advancements.toneko.root.description": "§dMake a Neko Collector, then stick to cats to absorb cat energy",
+  "advancements.toneko.root.title": "§aStick to neko",
+  "advancements.toneko.root.description": "§dMake a Neko Collector, then stick to neko to absorb neko energy",
   "advancements.toneko.got_neko_potion.title": "§aBecome a neko",
   "advancements.toneko.got_neko_potion.description": "§dGet neko potion",
   "advancements.toneko.neko_armor.title": "§aMeow, neko tails wag",
@@ -122,7 +184,7 @@
   "screen.toneko.neko_entity_interactive.button.get_down": "Get down",
   "screen.toneko.neko_entity_interactive.button.get_down.des": "Make the neko get down (press it again to get up)",
   "screen.toneko.neko_entity_interactive.button.breed": "mating",
-  "screen.toneko.neko_entity_interactive.button.breed.des": "Let the nearest cat mate with a neko (or you)",
+  "screen.toneko.neko_entity_interactive.button.breed.des": "Let the nearest neko mate with a neko (or you)",
   "screen.toneko.mate": "Select mate target",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
